feature: add header component

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,58 @@
   <title>DataWare</title>
 </head>
 <body>
+<header class="header header__page">
+  <div class="container">
+    <div class="header__panel">
+      <div class="logo">
+        <img src="../public/images/header/logo.svg" alt="logo" class="logo__img">
+      </div>
+      <nav class="header__nav">
+        <ul class="header__menu menu">
+          <li class="menu__item"><a class="menu__link menu_active" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Help</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Features</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Signup</a></li>
+        </ul>
+        <div class="search">
+          <img src="../public/images/header/search.svg" alt="search" class="search__img">
+        </div>
+      </nav>
+      <button class="btn btn_light">
+        <span class="btn__text">Request Demo</span>
+        <img src="../public/images/header/arrow.svg" alt="arrow" class="btn__arrow">
+      </button>
+    </div>
+    <div class="header__slider slider">
+      <div class="slider__item">
+        <div class="slider__content">
+          <h2 class="slider__title">Save your data storage here.</h2>
+          <p class="slider__description">
+            Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.
+          </p>
+          <button class="btn btn_purple">Learn more</button>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__content">
+          <h2 class="slider__title">Save your data storage here.</h2>
+          <p class="slider__description">
+            Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.
+          </p>
+          <button class="btn btn_purple">Learn more</button>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__content">
+          <h2 class="slider__title">Save your data storage here.</h2>
+          <p class="slider__description">
+            Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.
+          </p>
+          <button class="btn btn_purple">Learn more</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 </body>
 </html>
