feature: add features component

--- a/src/index.html
+++ b/src/index.html
@@ -59,5 +59,67 @@
     </div>
   </div>
 </header>
+<main>
+  <section class="features features__page">
+    <div class="container">
+      <h3 class="title">Features</h3>
+      <p class="features__description description">Some of the features and advantages that we provide for those of you who store data in this Data Warehouse.</p>
+      <div class="features__examples">
+        <div class="feature-block feature-block_1">
+          <div class="feature-block__wrapper">
+            <img src="../public/images/features/features-1.png" width="232" height="211" alt="photo" class="feature-block__img">
+            <div class="feature-block__content">
+              <h4 class="feature-block__title">Search Data</h4>
+              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <a href="#" class="feature-block__link link">
+                <span class="link__text">Learn more</span>
+                <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="feature-block feature-block_2">
+          <div class="feature-block__wrapper">
+            <img src="../public/images/features/features-2.png" width="232" height="211" alt="photo" class="feature-block__img">
+            <div class="feature-block__content">
+              <h4 class="feature-block__title">Search Data</h4>
+              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <a href="#" class="feature-block__link link">
+                <span class="link__text">Learn more</span>
+                <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="feature-block feature-block_3">
+          <div class="feature-block__wrapper">
+            <img src="../public/images/features/features-3.png" width="245" height="181" alt="photo" class="feature-block__img">
+            <div class="feature-block__content">
+              <h4 class="feature-block__title">Search Data</h4>
+              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <a href="#" class="feature-block__link link">
+                <span class="link__text">Learn more</span>
+                <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="feature-block feature-block_4">
+          <div class="feature-block__wrapper">
+            <img src="../public/images/features/features-4.png" width="232" height="211" alt="photo" class="feature-block__img">
+            <div class="feature-block__content">
+              <h4 class="feature-block__title">Search Data</h4>
+              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <a href="#" class="feature-block__link link">
+                <span class="link__text">Learn more</span>
+                <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
 </body>
 </html>
