--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,23 @@
       </div>
     </div>
   </section>
+  <section class="propose">
+    <div class="container">
+      <div class="propose__wrapper">
+        <div class="propose__info">
+          <h3 class="title">Try for free!</h3>
+          <p class="propose__description description">Get limited 1 week free try our features!</p>
+        </div>
+        <div class="propose__buttons">
+          <button class="btn btn_purple">Learn more</button>
+          <button class="btn btn_light">
+            <span class="btn__text">Request Demo</span>
+            <img src="../public/images/header/arrow.svg" alt="arrow" class="btn__arrow">
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 </body>
 </html>
