--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 <header class="header header__page">
   <div class="container">
     <div class="header__panel">
-      <div class="logo">
+      <a href="#" class="logo">
         <img src="../public/images/header/logo.svg" alt="logo" class="logo__img">
-      </div>
+      </a>
       <nav class="header__nav">
         <ul class="header__menu menu">
           <li class="menu__item"><a class="menu__link menu_active" href="#">About</a></li>
@@ -138,5 +138,45 @@
     </div>
   </section>
 </main>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__wrapper">
+      <div class="footer__info">
+        <a href="#" class="logo footer__logo">
+          <img src="../public/images/header/logo.svg" alt="logo" class="logo__img">
+          <h5 class="logo__title">DataWare</h5>
+        </a>
+        <address class="footer__address footer__contacts"><a target="_blank" href="https://goo.gl/maps/PXPcWnzLUpPyGszz6">Warehouse Society, 234</a></address>
+        <address class="footer__address footer__contacts"><a target="_blank" href="https://goo.gl/maps/PXPcWnzLUpPyGszz6">Bahagia Ave Street PRBW 29281</a></address>
+        <a href="mailto:info@warehouse.project" class="footer__mail footer__contacts">info@warehouse.project</a>
+        <a href="tel:+12323434" class="footer__tel footer__contacts">1-232-3434 (Main)</a>
+      </div>
+      <div class="footer__menu">
+        <h6 class="footer__menu-title">About</h6>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Profile</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Features</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Careers</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">DW News</a></div>
+      </div>
+      <div class="footer__menu">
+        <h6 class="footer__menu-title">Help</h6>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Support</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Sign up</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Guide</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Reports</a></div>
+        <div class="menu__item footer__item"><a class="menu__link" href="#">Q&A</a></div>
+      </div>
+      <div class="footer__social">
+        <h6 class="footer__menu-title">Social Media</h6>
+        <div class="footer__social-block">
+          <a href="#" class="footer__social-link"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="footer__social-link"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="footer__social-link"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <p class="footer__copyright">&copy; Datawarehouse™, 2020. All rights reserved. Company Registration Number: 21479524.</p>
+  </div>
+</footer>
 </body>
 </html>
