add modal component

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,33 @@
   <title>DataWare</title>
 </head>
 <body>
+<div class="overlay"></div>
+<div class="modal">
+  <div class="modal__block">
+    <div class="modal__content">
+      <div class="modal__title">Request Demo</div>
+      <form  id="userForm"  role="form" class="form">
+        <div class="form__left form__side">
+          <div class="form__block">
+            <input class="form__input underline_modal" type="text" id="name" name="name" placeholder="Name">
+          </div>
+          <div class="form__block">
+            <input class="form__input underline_modal" type="email" id="email" name="email" placeholder="Email">
+          </div>
+          <div class="form__block">
+            <input class="form__input underline_modal" type="url" id="web" name="url" placeholder="Web">
+          </div>
+        </div>
+        <div class="form__right form__side">
+          <div class="form__message">
+            <textarea class="form__textarea" type="text" id="message" placeholder="Message"></textarea>
+          </div>
+        </div>
+      </form>
+      <button type="submit" form="userForm" class="btn btn_purple btn_modal">Send</button>
+    </div>
+  </div>
+</div>
 <header class="header header__page">
   <div class="container">
     <div class="header__panel">
@@ -66,8 +93,8 @@
       <p class="features__description description">Some of the features and advantages that we provide for those of you who store data in this Data Warehouse.</p>
       <div class="features__examples">
         <div class="feature-block feature-block_1">
+          <img src="../public/images/features/features-1.png" width="232" height="211" alt="photo" class="feature-block__img">
           <div class="feature-block__wrapper">
-            <img src="../public/images/features/features-1.png" width="232" height="211" alt="photo" class="feature-block__img">
             <div class="feature-block__content">
               <h4 class="feature-block__title">Search Data</h4>
               <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
@@ -79,11 +106,11 @@
           </div>
         </div>
         <div class="feature-block feature-block_2">
+          <img src="../public/images/features/features-2.png" width="230" height="201" alt="photo" class="feature-block__img">
           <div class="feature-block__wrapper">
-            <img src="../public/images/features/features-2.png" width="232" height="211" alt="photo" class="feature-block__img">
             <div class="feature-block__content">
-              <h4 class="feature-block__title">Search Data</h4>
-              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <h4 class="feature-block__title">Security Code</h4>
+              <p class="feature-block__description">Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
               <a href="#" class="feature-block__link link">
                 <span class="link__text">Learn more</span>
                 <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
@@ -92,11 +119,11 @@
           </div>
         </div>
         <div class="feature-block feature-block_3">
+          <img src="../public/images/features/features-3.png" width="245" height="181" alt="photo" class="feature-block__img">
           <div class="feature-block__wrapper">
-            <img src="../public/images/features/features-3.png" width="245" height="181" alt="photo" class="feature-block__img">
             <div class="feature-block__content">
-              <h4 class="feature-block__title">Search Data</h4>
-              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <h4 class="feature-block__title">Print Out</h4>
+              <p class="feature-block__description">Print out service gives you convenience if someday you need print data, just edit it all and just print it.</p>
               <a href="#" class="feature-block__link link">
                 <span class="link__text">Learn more</span>
                 <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
@@ -105,11 +132,11 @@
           </div>
         </div>
         <div class="feature-block feature-block_4">
+          <img src="../public/images/features/features-4.png" width="240" height="184" alt="photo" class="feature-block__img">
           <div class="feature-block__wrapper">
-            <img src="../public/images/features/features-4.png" width="232" height="211" alt="photo" class="feature-block__img">
             <div class="feature-block__content">
-              <h4 class="feature-block__title">Search Data</h4>
-              <p class="feature-block__description">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+              <h4 class="feature-block__title">24 Hours Access</h4>
+              <p class="feature-block__description">Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.</p>
               <a href="#" class="feature-block__link link">
                 <span class="link__text">Learn more</span>
                 <img src="../public/images/header/arrow.svg" alt="arrow" class="link__img">
@@ -120,6 +147,7 @@
       </div>
     </div>
   </section>
+  <div class="underline underline_content"></div>
   <section class="propose">
     <div class="container">
       <div class="propose__wrapper">
